--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -30,7 +30,8 @@
         app:menu="@menu/bottom_nav_menu"
         app:itemTextColor="@color/white"
         app:itemIconTint="@color/white"
-        android:background="@color/purple"
+        android:background="@color/orange_700"
+        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
