--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_headlines">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.dennis.newsapp.ui.headlines.HeadlinesFragment"
+        android:id="@+id/navigation_headlines"
+        android:name="com.dennis.newsapp.ui.fragments.HeadlinesFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_headlines">
         <action
@@ -15,8 +15,8 @@
             app:destination="@id/articleDetailFragment"/>
     </fragment>
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.dennis.newsapp.ui.sources.SourcesFragment"
+        android:id="@+id/navigation_sources"
+        android:name="com.dennis.newsapp.ui.fragments.SourcesFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_source">
         <action
@@ -25,8 +25,8 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.dennis.newsapp.ui.saved.SavedFragment"
+        android:id="@+id/navigation_saved"
+        android:name="com.dennis.newsapp.ui.fragments.SavedFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_saved">
         <action
@@ -35,7 +35,7 @@
     </fragment>
     <fragment
         android:id="@+id/articleDetailFragment"
-        android:name="com.dennis.newsapp.ui.news_details.ArticleDetailFragment"
+        android:name="com.dennis.newsapp.ui.fragments.ArticleDetailFragment"
         android:label="ArticleDetailFragment" >
         <argument
             android:name="article"
